force-app/main/default/objects/Opportunity/fields/Account_Cntact_Emails__c.field-meta.xml
<CustomField>
    <fullName>Account_Cntact_Emails__c</fullName>
    <label>Demo - Account Cntact Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>