force-app/main/default/objects/Opportunity/fields/ActiveSpa__c.field-meta.xml
<CustomField>
    <fullName>ActiveSpa__c</fullName>
    <label>ActiveSpa</label>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>equals</operation>
        <value>Needs Review, Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>