force-app/main/default/objects/Opportunity/fields/ApexTest__c.field-meta.xml
<CustomField>
    <fullName>ApexTest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used for test to run without hitting query limits on all the updates. This will be less needed as classes and triggers are updated with better efficiency</description>
    <label>Apex Test</label>
    <type>Checkbox</type>
</CustomField>