force-app/main/default/objects/Opportunity/fields/Auto_Update_Opp_Name__c.field-meta.xml
<CustomField>
    <fullName>Auto_Update_Opp_Name__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, automatically updates the opportunity name to match external or internal naming conventions. Mobile Users are recommended to check this field.</inlineHelpText>
    <label>Auto Create Opp Name</label>
    <type>Checkbox</type>
</CustomField>