force-app/main/default/objects/Opportunity/fields/Bid_Registered__c.field-meta.xml
<CustomField>
    <fullName>Bid_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically updated when Spa Request field has bid registered selected.</inlineHelpText>
    <label>Bid Registered</label>
    <type>Checkbox</type>
</CustomField>