force-app/main/default/objects/Opportunity/fields/BirdSPA__c.field-meta.xml
<CustomField>
    <fullName>BirdSPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bird SPA</label>
    <type>Checkbox</type>
</CustomField>