force-app/main/default/objects/Opportunity/fields/BR_Conga__c.field-meta.xml
<CustomField>
    <fullName>BR_Conga__c</fullName>
    <formula>if(Spa_with_BR__c &gt;0, &quot;BR&quot;, &quot;&quot;)</formula>
    <label>BR Conga</label>
    <type>Text</type>
</CustomField>