force-app/main/default/objects/Opportunity/fields/BR_Exists__c.field-meta.xml
<CustomField>
    <fullName>BR_Exists__c</fullName>
    <label>BR Exists</label>
    <summaryFilterItems>
        <field>Quote.Bid_Registered__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>