force-app/main/default/objects/Opportunity/fields/Clone_Quote_Products__c.field-meta.xml
<CustomField>
    <fullName>Clone_Quote_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is on the quote action to create a quote. lets class know to clone the quote as well. otherwise, the clone will only clone the opp</description>
    <label>Clone Quote Products</label>
    <type>Checkbox</type>
</CustomField>