force-app/main/default/objects/Opportunity/fields/Cloning__c.field-meta.xml
<CustomField>
    <fullName>Cloning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to suppress unbulkified flows when cloning. Cloning buttons must be url hacked for this to work</description>
    <label>Cloning</label>
    <type>Checkbox</type>
</CustomField>