force-app/main/default/objects/Opportunity/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <formula>if(text(StageName) = &apos;Closed Lost&apos;, true,
if(text(StageName) =&apos;Closed Won&apos;,true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>