force-app/main/default/objects/Opportunity/fields/Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost__c</fullName>
    <formula>Contains(text(StageName),&apos;Lost&apos;)</formula>
    <label>Closed Lost</label>
    <type>Checkbox</type>
</CustomField>