force-app/main/default/objects/Opportunity/fields/Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won__c</fullName>
    <formula>CONTAINS(text(StageName), &apos;Won&apos;)</formula>
    <label>Closed Won</label>
    <type>Checkbox</type>
</CustomField>