force-app/main/default/objects/Opportunity/fields/CloseDate3Mo__c.field-meta.xml
<CustomField>
    <fullName>CloseDate3Mo__c</fullName>
    <formula>Quotes_Active__c &gt; 0 ||
(text(StageName) != &apos;Closed Won&apos; &amp;&amp; text(StageName) != &apos;Closed Lost&apos; &amp;&amp; CloseDate &gt; Today()-90 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CloseDate3Mo</label>
    <type>Checkbox</type>
</CustomField>