force-app/main/default/objects/Opportunity/fields/Committed__c.field-meta.xml
<CustomField>
    <fullName>Committed__c</fullName>
    <formula>ISPICKVAL(StageName, &apos;Closed Won&apos;) ||
ISPICKVAL(StageName, &apos;Agreed to Purchase&apos;) ||
ISPICKVAL(StageName, &apos;Pending PO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Committed</label>
    <type>Checkbox</type>
</CustomField>