force-app/main/default/objects/Opportunity/fields/Contact_End_User_Exists__c.field-meta.xml
<CustomField>
    <fullName>Contact_End_User_Exists__c</fullName>
    <description>Ensures the flow for follow up with end user contact does not cause an error if it is blank</description>
    <formula>not(isblank(End_User_Contact__c ))</formula>
    <label>Contact End User Exists</label>
    <type>Checkbox</type>
</CustomField>