force-app/main/default/objects/Opportunity/fields/Count_of_Distributors__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Distributors__c</fullName>
    <description>Counts the amount of distributors are on the spa. this is used in validation rules as indirect spas must have at least 1 distributor</description>
    <label>Count of Distributors</label>
    <summaryFilterItems>
        <field>Opportunity_Partner__c.Partner_Type__c</field>
        <operation>equals</operation>
        <value>Distributor</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Partner__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>