force-app/main/default/objects/Opportunity/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Region of the deal.</description>
    <inlineHelpText>Region of deal. The distributors added depend on this field. US, Canada, or no distributors will be added based on this field.</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
                <default>true</default>
                <label>United States</label>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>VSI</fullName>
            </value>
            <value>
                <fullName>VSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>