force-app/main/default/objects/Opportunity/fields/CreatedBy_Active__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy_Active__c</fullName>
    <formula>CreatedBy.IsActive=true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedBy Active</label>
    <type>Checkbox</type>
</CustomField>