force-app/main/default/objects/Opportunity/fields/Distributor_Account__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This ensures that competing distributors are not added to the opportunity partners.</inlineHelpText>
    <label>Partner Opportunity</label>
    <type>Checkbox</type>
</CustomField>