force-app/main/default/objects/Opportunity/fields/Distributors__c.field-meta.xml
<CustomField>
    <fullName>Distributors__c</fullName>
    <description>Updated by flow</description>
    <label>Distributors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>