force-app/main/default/objects/Opportunity/fields/Distributors_Requested__c.field-meta.xml
<CustomField>
    <fullName>Distributors_Requested__c</fullName>
    <label>Distributors Requested</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>