force-app/main/default/objects/Opportunity/fields/DonotAddAccessories__c.field-meta.xml
<CustomField>
    <fullName>DonotAddAccessories__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Add Accessories</label>
    <type>Checkbox</type>
</CustomField>