force-app/main/default/objects/Opportunity/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <formula>End_User_Company__c</formula>
    <inlineHelpText>For Reporting. Clean Column and dashboard look</inlineHelpText>
    <label>End User</label>
    <type>Text</type>
</CustomField>