force-app/main/default/objects/Opportunity/fields/End_User_City__c.field-meta.xml
<CustomField>
    <fullName>End_User_City__c</fullName>
    <inlineHelpText>End User Zip Code. Only needed if lookup field not used</inlineHelpText>
    <label>End User City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>