force-app/main/default/objects/Opportunity/fields/End_User_Company__c.field-meta.xml
<CustomField>
    <fullName>End_User_Company__c</fullName>
    <inlineHelpText>You can enter the end user as text if you cannot find the Account Name using the lookup field, You do not need to enter both.</inlineHelpText>
    <label>End User Company (Text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>