force-app/main/default/objects/Opportunity/fields/End_User_Contact__c.field-meta.xml
<CustomField>
    <fullName>End_User_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The email Address will be attached to the opportunity once an email is attached to the contact</inlineHelpText>
    <label>End User Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (End User Contact)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>