force-app/main/default/objects/Opportunity/fields/End_User_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>End_User_Contact_Email__c</fullName>
    <label>End User Contact Email</label>
    <type>Email</type>
</CustomField>