force-app/main/default/objects/Opportunity/fields/End_User_Contact_Name_Community_Field__c.field-meta.xml
<CustomField>
    <fullName>End_User_Contact_Name_Community_Field__c</fullName>
    <label>End User Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>