force-app/main/default/objects/Opportunity/fields/End_User_Lookup_Account__c.field-meta.xml
<CustomField>
    <fullName>End_User_Lookup_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this to lookup existing end user accounts. If it does not exist, then you can just enter as text in the section below. &quot;End User Company, City, and state&quot; You only need to fill one section.</inlineHelpText>
    <label>End User</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Must Select End User Account. If you do not see an existing account, please make sure the Account &apos;Type&apos; is set as &apos;End User&apos;</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>End User</value>
        </filterItems>
        <filterItems>
            <field>$User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (End User Lookup Account)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>