force-app/main/default/objects/Opportunity/fields/End_User_Name__c.field-meta.xml
<CustomField>
    <fullName>End_User_Name__c</fullName>
    <description>for wave filter builder on the opportunity page</description>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User Name</label>
    <type>Text</type>
</CustomField>