force-app/main/default/objects/Opportunity/fields/End_User_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>End_User_Parent_Account__c</fullName>
    <formula>Account.ParentID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User Parent Account</label>
    <type>Text</type>
</CustomField>