force-app/main/default/objects/Opportunity/fields/End_User_State_Text__c.field-meta.xml
<CustomField>
    <fullName>End_User_State_Text__c</fullName>
    <label>End User State 2 Digit</label>
    <length>200</length>
    <type>Text</type>
</CustomField>