force-app/main/default/objects/Opportunity/fields/End_User_Zip__c.field-meta.xml
<CustomField>
    <fullName>End_User_Zip__c</fullName>
    <label>End User Zip</label>
    <length>12</length>
    <type>Text</type>
</CustomField>