force-app/main/default/objects/Opportunity/fields/Etail__c.field-meta.xml
<CustomField>
    <fullName>Etail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etail</label>
    <type>Checkbox</type>
</CustomField>