force-app/main/default/objects/Opportunity/fields/FocusAccount__c.field-meta.xml
<CustomField>
    <fullName>FocusAccount__c</fullName>
    <formula>(Account.Focus_Account__c = true ||
Account.End_User_Focus__c ) &amp;&amp;
CreatedById != Account.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FocusAccount</label>
    <type>Checkbox</type>
</CustomField>