force-app/main/default/objects/Opportunity/fields/Follow_Up_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Email_Address__c</fullName>
    <label>Follow Up Email Address</label>
    <type>Email</type>
</CustomField>