force-app/main/default/objects/Opportunity/fields/globalmportStatus__c.field-meta.xml
<CustomField>
    <fullName>globalmportStatus__c</fullName>
    <label>globalmportStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>