force-app/main/default/objects/Opportunity/fields/IFP_Amount__c.field-meta.xml
<CustomField>
    <fullName>IFP_Amount__c</fullName>
    <label>IFP Amount</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Pillar__c</field>
        <operation>equals</operation>
        <value>IFP</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>