force-app/main/default/objects/Opportunity/fields/Inactive_Product__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Product__c</fullName>
    <formula>Product_Name_Main__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Product</label>
    <type>Checkbox</type>
</CustomField>