force-app/main/default/objects/Opportunity/fields/LikelyProducts__c.field-meta.xml
<CustomField>
    <fullName>LikelyProducts__c</fullName>
    <description>Determines if there are any likely products selected. if not, it will select a modal to select products.</description>
    <label>LikelyProducts</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Likely_Purchase__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>