force-app/main/default/objects/Opportunity/fields/List_of_Work_Activity__c.field-meta.xml
<CustomField>
    <fullName>List_of_Work_Activity__c</fullName>
    <inlineHelpText>List pertinent calls, emails, trade shows, and any other activity which shows why you should have this deal bid protected. This can  be your activity as well as the Resellers.</inlineHelpText>
    <label>List of Work &amp; Activity</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>