force-app/main/default/objects/Opportunity/fields/Lost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lost_Amount__c</fullName>
    <formula>if(text(StageName)=&apos;Closed Lost&apos;,Amount,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lost Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>