force-app/main/default/objects/Opportunity/fields/Manager_Note__c.field-meta.xml
<CustomField>
    <fullName>Manager_Note__c</fullName>
    <label>Manager Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>