force-app/main/default/objects/Opportunity/fields/Migrated_Notes__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Notes__c</fullName>
    <label>Migrated Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>