force-app/main/default/objects/Opportunity/fields/migratedOwnerName__c.field-meta.xml
<CustomField>
    <fullName>migratedOwnerName__c</fullName>
    <description>this allows tracking and use of code to map user owners from migrations</description>
    <label>migratedOwnerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>