force-app/main/default/objects/Opportunity/fields/migratedScore__c.field-meta.xml
<CustomField>
    <fullName>migratedScore__c</fullName>
    <label>migratedScore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>