force-app/main/default/objects/Opportunity/fields/migtratedUniqueName__c.field-meta.xml
<CustomField>
    <fullName>migtratedUniqueName__c</fullName>
    <externalId>true</externalId>
    <label>migtratedUniqueName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>