force-app/main/default/objects/Opportunity/fields/My_Custom_Bundle__c.field-meta.xml
<CustomField>
    <fullName>My_Custom_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>My Custom Bundle</label>
    <referenceTo>Product_Package__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>