force-app/main/default/objects/Opportunity/fields/National__c.field-meta.xml
<CustomField>
    <fullName>National__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National</label>
    <type>Checkbox</type>
</CustomField>