force-app/main/default/objects/Opportunity/fields/Old_Spa_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Spa_ID__c</fullName>
    <inlineHelpText>SPA ID from the old spa portal.</inlineHelpText>
    <label>Old Spa ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>