force-app/main/default/objects/Opportunity/fields/OppOldestCreated__c.field-meta.xml
<CustomField>
    <fullName>OppOldestCreated__c</fullName>
    <description>Determines if this opportunity is the oldest opportunity relating to account</description>
    <formula>Account.oppOldestdate__c == datevalue(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OppOldestCreated</label>
    <type>Checkbox</type>
</CustomField>