force-app/main/default/objects/Opportunity/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp; Id , Name)</formula>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>