force-app/main/default/objects/Opportunity/fields/Opportunity_Days__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Days__c</fullName>
    <description>Use to count the days for Opportunity before sending reminder email to sale rep</description>
    <label>Opportunity Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>