force-app/main/default/objects/Opportunity/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <description>Giving opportunities identifying #&apos;s so they can be tracked.</description>
    <displayFormat>{0000000000}</displayFormat>
    <label>Opportunity #</label>
    <type>AutoNumber</type>
</CustomField>