force-app/main/default/objects/Opportunity/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <formula>left(
if(not(isblank(Account.Name)),
SUBSTITUTE(Account.Name, &quot;&apos;&quot;, &quot;&quot;),
if(not(isblank( Partner_Account_Search__r.Name )),Partner_Account_Search__r.Name,&apos;Need End User or Reseller&apos;)),120)

&amp; &quot; &quot;&amp; if(not(isblank( School__c)) ,School__r.Name,  Project_or_Site_Information__c )    &amp;
 if(Count_of_Quotes__c=0,&quot; &quot;, &quot; Spa ID# &quot;&amp;SPA_ID__c&amp;&apos; &apos;)
&amp;
if(not(isblank(Product_Name__c)),Product_Name__c&amp; &quot; Qty &quot;&amp;text(Product_Quantity__c),&apos;&apos;)&amp;&apos; &apos;&amp;BR_Conga__c</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>