force-app/main/default/objects/Opportunity/fields/Opportunity_Name_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>