force-app/main/default/objects/Opportunity/fields/Opportunity_Notes__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Notes__c</fullName>
    <description>Sales Rep can enter notes to set up reminders and situation on the the opportunity</description>
    <inlineHelpText>Sales Rep can enter notes to set up reminders and situation on the the opportunity</inlineHelpText>
    <label>Opportunity Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>