force-app/main/default/objects/Opportunity/fields/Opportunity_Product_Update__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Update__c</fullName>
    <label>Product Approval Update</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>