force-app/main/default/objects/Opportunity/fields/OpportunityProducts__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProducts__c</fullName>
    <formula>HYPERLINK(&apos;/p/opp/SelectSearch?addTo=&apos;&amp;Id , &apos;Add Products&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Products</label>
    <type>Text</type>
</CustomField>