force-app/main/default/objects/Opportunity/fields/Parent_account__c.field-meta.xml
<CustomField>
    <fullName>Parent_account__c</fullName>
    <formula>if ( Account.ParentId =&quot;&quot;,   Hyperlink ( Account.Id  ,  Account.Name ),   Hyperlink ( Account.Parent.Id ,  Account.Parent.Name ))</formula>
    <label>Parent account</label>
    <type>Text</type>
</CustomField>