force-app/main/default/objects/Opportunity/fields/Parent_Account_LU__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Highest Level Account in Heirachy</inlineHelpText>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Parent Account)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>