force-app/main/default/objects/Opportunity/fields/Parent_End_User_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_End_User_Account__c</fullName>
    <formula>Account.Parent_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent End User Account</label>
    <type>Text</type>
</CustomField>