force-app/main/default/objects/Opportunity/fields/Partner_Account_Search__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Search__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Re-Seller VAR will be added to opportunity partners. If you need to add additional Resellers, Please Use Opportunity Partners.</inlineHelpText>
    <label>Reseller Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>