force-app/main/default/objects/Opportunity/fields/PB_Default_Flow__c.field-meta.xml
<CustomField>
    <fullName>PB_Default_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>supresses Price Book Default Flow when the Expired products flow is running. This is to clear out expired opportunity products that are on the opp page that can cause errors to other flows or updates. need to clear out these fields when the products expire.</description>
    <label>PB Default Flow</label>
    <type>Checkbox</type>
</CustomField>