force-app/main/default/objects/Opportunity/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <label>Pipeline</label>
    <summarizedField>OpportunityLineItem.ListPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Likely_Purchase__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>