force-app/main/default/objects/Opportunity/fields/PortalCreated__c.field-meta.xml
<CustomField>
    <fullName>PortalCreated__c</fullName>
    <formula>text(CreatedBy.UserType ) == &apos;PowerPartner&apos; &amp;&amp;
CreatedBy.Distribution_Partner__c == false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PortalCreated</label>
    <type>Checkbox</type>
</CustomField>