force-app/main/default/objects/Opportunity/fields/Price_Book_Exists__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Book Exists</label>
    <type>Checkbox</type>
</CustomField>