force-app/main/default/objects/Opportunity/fields/Price_Issue_Exists__c.field-meta.xml
<CustomField>
    <fullName>Price_Issue_Exists__c</fullName>
    <label>Price Issue Exists</label>
    <summarizedField>OpportunityLineItem.Price_Alert__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>