force-app/main/default/objects/Opportunity/fields/Pricebookid__c.field-meta.xml
<CustomField>
    <fullName>Pricebookid__c</fullName>
    <formula>Pricebook2Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebookid</label>
    <type>Text</type>
</CustomField>