force-app/main/default/objects/Opportunity/fields/Product_Added__c.field-meta.xml
<CustomField>
    <fullName>Product_Added__c</fullName>
    <inlineHelpText>Test out the product price flow..temp field</inlineHelpText>
    <label>Product Added Date</label>
    <type>Date</type>
</CustomField>