force-app/main/default/objects/Opportunity/fields/Product_Family2__c.field-meta.xml
<CustomField>
    <fullName>Product_Family2__c</fullName>
    <formula>text(Product_Name_Main__r.Family)</formula>
    <label>Product Family2</label>
    <type>Text</type>
</CustomField>