force-app/main/default/objects/Opportunity/fields/Product_Main_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Main_Id__c</fullName>
    <description>Id for the product main. This is to ensure that accessories page can work</description>
    <label>Product Main Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>