force-app/main/default/objects/Opportunity/fields/Product_Manager_Note__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_Note__c</fullName>
    <inlineHelpText>PM that approves price and any other pertinent info.</inlineHelpText>
    <label>Product Manager Note</label>
    <type>TextArea</type>
</CustomField>