force-app/main/default/objects/Opportunity/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <inlineHelpText>Workaround for Product Name appearing in Opportunity Name. This is not visible in any sales layouts.</inlineHelpText>
    <label>Product Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>